
MASTER

* Remove DBI dependency and go straight ODBC for speed improvement [Erik Bryn]

* Leave order by alone when same column crosses two tables [Ransom Briggs]


* 2.3 * (December 1st, 2009)

* Table and column aliases can handle many. Resolves ticket #19 [stonegao]

* Coerce a few tests that were failing in 2.3.x [Ken Collins]

* Change column/view cache to happen at class level. Allows connection pool to share same
  caches as well as the ability to expire the caches when needed. Also fix change_column so 
  that exceptions are not raised when the column contains an existing default. [Ken Collins]

* Allow query_requires_identity_insert? method to return quoted table name in situations where the 
  INSERT parts are not quoted themselves. [Gary/iawgens, Richard Penwell, Ken Collins]

* Fixed namespace in calling test_sqlserver_odbc within test_unicode_types. [Gary/iawgens]

* Columns with multi-line defaults work correctly. [bfabry]


* 2.2.22 * (October 15th, 2009)

* Support Identity-key-column judgement on multiple schema environment [Ken Tachiya]

* Add support for tinyint data types. In MySQL all these types would be boolean, however in 
  our adapter, they will use the full 1 => 255 Fixnum value as you would expect. [Ken Collins]


* 2.2.21 * (September 10th, 2009)

* Changes for gem best practices per http://weblog.rubyonrails.org/2009/9/1/gem-packaging-best-practices
  Details of such are as follows: [Ken Collins]
  - Removed rails-sqlserver-2000-2005-adapter.rb load file for old github usage.
  - Move the core_ext directory to active_record/connection_adapters/sqlserver_adapter/core_ext
  - Renamespace SQLServerDBI to ActiveRecord::ConnectionAdapters::SQLServerCoreExtensions::DBI
  - Renamespace ActiveRecord::ConnectionAdapters::SQLServerActiveRecordExtensions to ActiveRecord::ConnectionAdapters::SQLServerCoreExtensions::ActiveRecord


* 2.2.20 * (September 10th, 2009)
